Fix navigation issue on mobile chrome

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -55,8 +55,6 @@
         width: 100%;
         padding: 24px 0;
         text-align: center;
-
-        flex-flow: column wrap;
     }
 
     .header-box {
